create question controller, routes and swagger docs
